--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        python-version: ['3.8', '3.9', '3.10']
+        os: [ubuntu-latest]
+        python-version: [''3.9']
 
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
 
