--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,9 @@ kill_timeout = 5
 [env]
   SWAP = "true"
 
+[deploy]
+  strategy = "rolling"
+
 [experimental]
   allowed_public_ports = []
   auto_rollback = true
