--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ bandit = "~=1.7.0"
 black = "==22.12.0"
 pylint = "~=2.9.3"
 typing-extensions = "==4.2.0"
+tomli = "==2.0.1"
 
 [packages]
 aiohttp = "==3.8.1"
