--- a/fly.toml
+++ b/fly.toml
@@ -8,11 +8,13 @@ primary_region = "iad"
 kill_signal = "SIGINT"
 kill_timeout = "5s"
 
+swap_size_mb = 512
+
+[[vm]]
+  size = "shared-cpu-1x"
+
 [experimental]
   auto_rollback = true
 
 [deploy]
   strategy = "rolling"
-
-[env]
-  SWAP = "true"
