--- a/fly.toml
+++ b/fly.toml
@@ -10,6 +10,11 @@ kill_timeout = "5s"
 
 swap_size_mb = 512
 
+[env]
+  PYTHONUNBUFFERED = "1"
+  PYTHONDONTWRITEBYTECODE = "1" 
+  USING_DOCKER = "yes"
+
 [[vm]]
   size = "shared-cpu-1x"
 
